--- a/Enter.UI/package.json
+++ b/Enter.UI/package.json
@@ -21,6 +21,9 @@
     "gulp-sass": "^5.1.0",
     "postcss": "^8.4.30",
     "sass": "^1.67.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "vinyl-named": "^1.1.0",
+    "webpack": "^5.88.2",
+    "webpack-stream": "^7.0.0"
   }
 }
