--- a/Enter.UI/Enter.UI.csproj
+++ b/Enter.UI/Enter.UI.csproj
@@ -17,25 +17,89 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.10" />
   </ItemGroup>
 
+  <Target Name="ToolRestore">
+    <Exec Command="dotnet tool restore" StandardOutputImportance="high" />
+  </Target>
+
+  <!--Is this a rebuild - Dont clean generated files as this breaks rebuild behaviour-->
+  <Target Name="ShouldCleanGeneratedFiles" BeforeTargets="BeforeRebuild">
+    <PropertyGroup>
+      <CleanGeneratedFiles>false</CleanGeneratedFiles>
+    </PropertyGroup>
+  </Target>
+
+  <Target Name="CleanGeneratedFiles" BeforeTargets="Clean" Condition="'$(CleanGeneratedFiles)' != 'false'">
+    <ItemGroup>
+      <FilesToClean Include="./TScripts/combined/EnterUi.js" />
+      <FilesToClean Include="./wwwroot/EnterUi.min.js" />
+      <FilesToClean Include="./wwwroot/EnterUi.min.css" />
+    </ItemGroup>
+    <Delete Files="@(FilesToClean)" />
+  </Target>
+  
+  <!--combine js files-->
+  <Target Name="CombineJS">
+    <CreateItem Include="./Scripts/**/*.js" Exclude="./Scripts/combined/**/*.js">
+      <Output TaskParameter="Include" ItemName="jsFilesToCombine" />
+    </CreateItem>
+    <ReadLinesFromFile File="%(jsFilesToCombine.FullPath)">
+      <Output TaskParameter="Lines" ItemName="jsLines" />
+    </ReadLinesFromFile>
+    <WriteLinesToFile File="./Scripts/combined/EnterUi.js" Lines="@(jsLines)" Overwrite="true" />
+  </Target>
+
+  <Target Name="WebCompiler" DependsOnTargets="ToolRestore;CombineJS">
+    <!--compile and minify scss-->
+    <Exec Command="webcompiler ./Styles/EnterUi.scss -c excubowebcompiler.json" StandardOutputImportance="high" StandardErrorImportance="high" />
+    <!--minify js-->
+    <Exec Command="webcompiler ./Scripts/combined/EnterUi.js -c excubowebcompiler.json" StandardOutputImportance="high" StandardErrorImportance="high" />
+  </Target>
+  
+  <Target Name="IncludeGeneratedStaticFiles" DependsOnTargets="WebCompiler" BeforeTargets="BeforeBuild">
+    <Error Condition="!Exists('$(MSBuildProjectDirectory)/wwwroot/EnterUi.min.css')" Text="Missing EnterUi.min.css in wwwroot" />
+    <Error Condition="!Exists('$(MSBuildProjectDirectory)/wwwroot/EnterUi.min.js')" Text="Missing EnterUi.min.js in wwwroot" />
+    <ItemGroup>
+      <!--Include without duplication-->
+      <_NewCompiledCssFiles Include="wwwroot\EnterUi.min.css" Exclude="@(Content)" />
+      <_NewCompiledJsFiles Include="wwwroot\EnterUi.min.js" Exclude="@(Content)" />
+      <Content Include="@(_NewCompiledCssFiles)" />
+      <Content Include="@(_NewCompiledJsFiles)" />
+    </ItemGroup>
+  </Target>
+
+  <!--Dont Include in build output-->
   <ItemGroup>
-    <Folder Include="wwwroot\dist\css\" />
+    <Content Remove="wwwroot/DoNotRemove.txt" />
+    <!--macOS hidden file (causes problems with dotnet pack)-->
+    <Content Remove="**/*/.DS_Store" />
+    <Content Remove="Scripts\combined\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <_ContentIncludedByDefault Remove="Components\Layout\ProMenuBar.razor" />
-    <_ContentIncludedByDefault Remove="wwwroot\dist\js\557.js" />
-    <_ContentIncludedByDefault Remove="wwwroot\dist\js\557.js.map" />
-    <_ContentIncludedByDefault Remove="wwwroot\dist\js\569.js" />
-    <_ContentIncludedByDefault Remove="wwwroot\dist\js\569.js.map" />
-    <_ContentIncludedByDefault Remove="wwwroot\dist\js\enter.js" />
-    <_ContentIncludedByDefault Remove="wwwroot\dist\js\enter.js.map" />
-    <_ContentIncludedByDefault Remove="Components\Table\EntTable.razor" />
+    <!--For automatic compile on save of the scss use
+    cd ./src/MudBlazor
+    dotnet watch webcompiler ./Styles/MudBlazor.scss -c excubowebcompiler.json
+    -->
+    <Watch Include="**/*.scss" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\dist\css\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Scripts\combined\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="Scripts\combined\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Scripts\combined\**" />
+    <None Remove="Styles\EnterUi.css" />
+    <None Remove="Styles\EnterUi.min.css" />
+  </ItemGroup>
 
 
 </Project>
