--- a/src/Enter.UI/Enter.UI.csproj
+++ b/src/Enter.UI/Enter.UI.csproj
@@ -10,9 +10,15 @@
     <Version>1.0.16</Version>
     <Authors>Akbar Ahmadi</Authors>
     <Company>AhmadiCo</Company>
-	  <PackageReadmeFile>../Readme.md</PackageReadmeFile>
+	  <PackageReadmeFile>Readme.md</PackageReadmeFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
+
+
+  <ItemGroup>
+    <None Include="..\..\Readme.md" Pack="true" PackagePath="."/>
+  </ItemGroup>
+  
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
@@ -112,6 +118,5 @@
   <ItemGroup>
     <_ContentIncludedByDefault Remove="Components\Forms\EntFormGroup.razor" />
   </ItemGroup>
-
 
 </Project>
