--- a/Source/Enter.UI/Enter.UI.csproj
+++ b/Source/Enter.UI/Enter.UI.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Enter.UI</RootNamespace>
     <PackageId>Enter.Ui</PackageId>
-    <Version>1.0.68</Version>
+    <Version>1.0.72</Version>
     <Authors>Akbar Ahmadi</Authors>
     <Company>AhmadiCo</Company>
     <PackageReadmeFile>Readme.md</PackageReadmeFile>
@@ -15,40 +15,6 @@
   
   <ItemGroup>
     <None Include="..\..\Readme.md" Pack="true" PackagePath="." />
-    <None Include="wwwroot\scripts\expanable.component.js" />
-    <None Include="wwwroot\scripts\layout.component.js" />
-    <None Include="wwwroot\scripts\popover.component.js" />
-    <None Include="wwwroot\scripts\shared.js" />
-    <None Include="wwwroot\styles\components\_components.scss" />
-    <None Include="wwwroot\styles\components\_ent_app_bar.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_button.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_card.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_drawer.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_expandable.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_form.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_icon.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_list.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_loading.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_messagebox.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_modal.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_nav_menu.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_overlay.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_pagination.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_popover.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_shimmer.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_tab.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_table.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_toast.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_toolbar.component.scss" />
-    <None Include="wwwroot\styles\components\_ent_treeview.component.scss" />
-    <None Include="wwwroot\styles\Enter.Ui.scss" />
-    <None Include="wwwroot\styles\themes\basic.theme.scss" />
-    <None Include="wwwroot\styles\themes\dark.theme.scss" />
-    <None Include="wwwroot\styles\_core.scss" />
-    <None Include="wwwroot\styles\_fonts.scss" />
-    <None Include="wwwroot\styles\_mixins.scss" />
-    <None Include="wwwroot\styles\_normalize.scss" />
-    <None Include="wwwroot\styles\_variables.scss" />
   </ItemGroup>
   
   <ItemGroup>
@@ -74,19 +40,20 @@
   
   <Target Name="CleanGeneratedFiles" BeforeTargets="Clean" Condition="'$(CleanGeneratedFiles)' != 'false'">
     <ItemGroup>
-      <FilesToClean Include="./wwwroot/combined/*.*" />
+      <FilesToClean Include="./Styles/combined/*.*" />
+      <FilesToClean Include="./Scripts/combined/*.*" />
       <FilesToClean Include="./wwwroot/js/Enter.Ui.min.js" />
       <FilesToClean Include="./wwwroot/js/Enter.Ui.js" />
       <FilesToClean Include="./wwwroot/css/Enter.Ui.min.css" />
-      <FilesToClean Include="./wwwroot/styles/Enter.Ui.min.css" />
-      <FilesToClean Include="./wwwroot/styles/Enter.Ui.css" />
+      <FilesToClean Include="./Styles/Enter.Ui.min.css" />
+      <FilesToClean Include="./Styles/Enter.Ui.css" />
     </ItemGroup>
     <Delete Files="@(FilesToClean)" />
   </Target>
   
   <!--combine js files-->
   <Target Name="CombineJS" DependsOnTargets="CleanGeneratedFiles">
-    <CreateItem Include="./wwwroot/scripts/**/*.js">
+    <CreateItem Include="./Scripts/**/*.js">
       <Output TaskParameter="Include" ItemName="jsFilesToCombine" />
     </CreateItem>
     <ReadLinesFromFile File="%(jsFilesToCombine.FullPath)">
@@ -97,9 +64,9 @@
 
   <Target Name="WebCompiler" DependsOnTargets="ToolRestore;CombineJS">
     <!--compile and minify scss-->
-    <Exec Command="dotnet webcompiler ./wwwroot/styles/Enter.Ui.scss -c excubowebcompiler.scss.json" StandardOutputImportance="high" StandardErrorImportance="high" />
+    <Exec Command="webcompiler ./Styles/Enter.Ui.scss -c excubowebcompiler.scss.json" StandardOutputImportance="high" StandardErrorImportance="high" />
     <!--minify js-->
-    <Exec Command="dotnet webcompiler ./wwwroot/js/Enter.Ui.js -c excubowebcompiler.js.json" StandardOutputImportance="high" StandardErrorImportance="high" />
+    <Exec Command="webcompiler ./wwwroot/js/Enter.Ui.js -c excubowebcompiler.js.json" StandardOutputImportance="high" StandardErrorImportance="high" />
   </Target>
   
   <Target Name="IncludeGeneratedStaticFiles" DependsOnTargets="WebCompiler" BeforeTargets="BeforeBuild">
@@ -109,6 +76,7 @@
       <!--Include without duplication-->
       <_NewCompiledCssFiles Include="wwwroot/css/Enter.Ui.min.css" Exclude="@(Content)" />
       <_NewCompiledJsFiles Include="wwwroot/js/Enter.Ui.min.js" Exclude="@(Content)" />
+      <_NewCompiledJsFiles Include="wwwroot/js/Enter.Ui.js" Exclude="@(Content)" />
       <Content Include="@(_NewCompiledCssFiles)" />
       <Content Include="@(_NewCompiledJsFiles)" />
     </ItemGroup>
@@ -120,6 +88,153 @@
     <!--macOS hidden file (causes problems with dotnet pack)-->
     <Content Remove="**/*/.DS_Store" />
     <Content Remove="Assets\combined\**" />
+    <Content Update="styles\components\_components.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_app_bar.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_button.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_card.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_drawer.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_expandable.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_form.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_icon.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_list.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_loading.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_messagebox.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_modal.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_nav_menu.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_overlay.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_pagination.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_popover.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_shimmer.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_tab.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_table.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_toast.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_toolbar.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\components\_ent_treeview.component.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\themes\basic.theme.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\themes\dark.theme.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\themes\light.theme.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\Enter.Ui.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\Enter.Ui.css">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <DependentUpon>Enter.Ui.scss</DependentUpon>
+    </Content>
+    <Content Update="styles\Enter.Ui.min.css">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <DependentUpon>Enter.Ui.css</DependentUpon>
+    </Content>
+    <Content Update="styles\_core.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\_fonts.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\_mixins.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\_normalize.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\_variables.scss">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\Enter.Ui.css">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="styles\Enter.Ui.min.css">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <DependentUpon>Enter.Ui.css</DependentUpon>
+    </Content>
+    <Content Update="styles\Enter.Ui.min.css">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
