--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 **/*/Enter.Ui.min.js
 **/*/Enter.Ui.css
 **/*/Enter.Ui.js
+**/*/EnterUi.min.css
+**/*/EnterUi.min.js
+**/*/EnterUi.css
+**/*/EnterUi.js
 **/combined
 
 **/*/package-lock.json
