--- a/Source/Enter.UI/Enter.UI.csproj
+++ b/Source/Enter.UI/Enter.UI.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Enter.UI</RootNamespace>
     <PackageId>Enter.Ui</PackageId>
-    <Version>1.0.76</Version>
+    <Version>1.0.78</Version>
     <Authors>Akbar Ahmadi</Authors>
     <Company>AhmadiCo</Company>
     <PackageReadmeFile>Readme.md</PackageReadmeFile>
@@ -246,6 +246,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Abstractions\Components\Icon\" />
+    <Folder Include="Abstractions\Components\Loading\" />
+    <Folder Include="Abstractions\Components\Popover\" />
     <Folder Include="wwwroot\" />
     <Folder Include="wwwroot\css\" />
   </ItemGroup>
@@ -253,6 +256,12 @@
   <ItemGroup>
     <_ContentIncludedByDefault Remove="Assets\Lib\remix\remixicon.glyph.json" />
     <_ContentIncludedByDefault Remove="wwwroot\combined\Enter.Ui.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Abstractions\Services\IEntToastService.cs" />
+    <Compile Remove="Abstractions\JsServices\IEntJsService.cs" />
+    <Compile Remove="Abstractions\IEntConfiguration.cs" />
   </ItemGroup>
 
 
