--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 **/*/Enter.Ui.min.css
 **/*/Enter.Ui.min.js
 **/*/Enter.Ui.css
+**/*/Enter.Ui.css.map
 **/*/Enter.Ui.js
 **/*/EnterUi.min.css
 **/*/EnterUi.min.js
