--- a/.github/workflows/dotnet-pages.yml
+++ b/.github/workflows/dotnet-pages.yml
@@ -19,7 +19,15 @@ jobs:
       with:
         dotnet-version: 8.x
         include-prerelease: true
-      
+        
+    # publishes Blazor project to the release-folder 
+    - name: ls
+      run: |
+        ls example/Enter.Dashboard
+        ls /
+        ls Source
+       
+        
     # publishes Blazor project to the release-folder 
     - name: Publish .NET Core Project
       run: |
