--- a/.github/workflows/dotnet-pages.yml
+++ b/.github/workflows/dotnet-pages.yml
@@ -12,41 +12,26 @@ jobs:
     steps:
     # uses GitHub's checkout action to checkout code form the master branch
     - uses: actions/checkout@v2
-    
-
-    - name: Setup .NET Core SDK
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 8.x
-        include-prerelease: true
-        
-    # publishes Blazor project to the release-folder 
-    - name: ls
-      run: |
-        ls Source/Enter.Ui
-       
         
     # publishes Blazor project to the release-folder 
     - name: Publish .NET Core Project
-      run: |
-        cd example/Enter.Dashboard
-        dotnet publish Enter.Dashboard.csproj -c Release -o release --nologo 
-    
+      run: cp Docs/wwwroot/index.html Docs/wwwroot/404.html
+        
     # changes the base-tag in index.html from '/' to 'BlazorGitHubPagesDemo' to match GitHub Pages repository subdirectory
     - name: Change base-tag in index.html from / to Enter.Ui
-      run: sed -i 's/<base href="\/" \/>/<base href="\/Enter.Ui\/" \/>/g' release/wwwroot/index.html
+      run: sed -i 's/<base href="\/" \/>/<base href="\/Enter.Ui\/" \/>/g' Docs/wwwroot/index.html
     
     # copy index.html to 404.html to serve the same file when a file is not found
     - name: copy index.html to 404.html
-      run: cp release/wwwroot/index.html release/wwwroot/404.html
+      run: cp Docs/wwwroot/index.html Docs/wwwroot/404.html
 
     # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
     - name: Add .nojekyll file
-      run: touch release/wwwroot/.nojekyll
+      run: touch Docs/wwwroot/.nojekyll
       
-    - name: Commit wwwroot to GitHub Pages
+    - name: Commit Docs to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gh-pages
-        FOLDER: release/wwwroot
+        FOLDER: Docs/wwwroot
