fix project structure

--- a/Source/Enter.Ui/Enter.UI.csproj
+++ b/Source/Enter.Ui/Enter.UI.csproj
@@ -5,7 +5,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <PackageId>Enter.Ui</PackageId>
-        <Version>1.0.93-preview6</Version>
+        <Version>1.0.93-preview7</Version>
         <Authors>Akbar Ahmadi</Authors>
         <Company>AhmadiCo</Company>
         <PackageReadmeFile>Readme.md</PackageReadmeFile>
@@ -95,6 +95,9 @@
     <ItemGroup>
       <_ContentIncludedByDefault Remove="wwwroot\css\Styles.razor.css" />
       <_ContentIncludedByDefault Remove="wwwroot\css\Styles.razor.css.map" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="wwwroot\css\" />
     </ItemGroup>
 
  
