--- a/Source/Enter.Ui/Enter.UI.csproj
+++ b/Source/Enter.Ui/Enter.UI.csproj
@@ -5,14 +5,16 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <PackageId>Enter.Ui</PackageId>
-        <Version>1.0.93-preview7</Version>
+        <Version>1.0.93</Version>
         <Authors>Akbar Ahmadi</Authors>
         <Company>AhmadiCo</Company>
         <PackageReadmeFile>Readme.md</PackageReadmeFile>
+        <PackageProjectUrl>https://github.com/akbaramd/Enter.UI</PackageProjectUrl>
         <PackageIcon>logo.png</PackageIcon>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <AssemblyName>Enter.Ui</AssemblyName>
         <RootNamespace>Enter.Ui</RootNamespace>
+        <RepositoryUrl>https://github.com/akbaramd/Enter.UI</RepositoryUrl>
     </PropertyGroup>
     <ItemGroup>
         <None Include="..\..\Readme.md" Pack="true" PackagePath="." />
@@ -45,8 +47,6 @@
         <ItemGroup>
             <FilesToClean Include="./Styles/combined/*.*" />
             <FilesToClean Include="./Scripts/combined/*.*" />
-            <FilesToClean Include="./wwwroot/css/Enter.Ui.css" />
-            <FilesToClean Include="./wwwroot/css/Enter.Ui.css.map" />
             <FilesToClean Include="./wwwroot/js/Enter.Ui.min.js" />
             <FilesToClean Include="./wwwroot/js/Enter.Ui.min.js.gz" />
             <FilesToClean Include="./wwwroot/js/Enter.Ui.js" />
