--- a/Source/Enter.Ui/Enter.UI.csproj
+++ b/Source/Enter.Ui/Enter.UI.csproj
@@ -100,6 +100,9 @@
     <ItemGroup>
       <Folder Include="wwwroot\css\" />
     </ItemGroup>
+    <ItemGroup>
+      <UpToDateCheckInput Remove="components\calendar\EntCalendar.razor.scss" />
+    </ItemGroup>
 
  
 </Project>
